logs/i3theme.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/i3theme'...
Listing './lib/python3.5/site-packages/i3theme/themes'...
Listing './lib/python3.5/site-packages/i3theme/utils'...
Compiling './lib/python3.5/site-packages/i3theme/utils/filebridge.py'...
***   File "./lib/python3.5/site-packages/i3theme/utils/filebridge.py", line 97
    print "i3-msg not found. Please install it to be able to reload the configuration."
                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/i3theme/utils/main.py'...
***   File "./lib/python3.5/site-packages/i3theme/utils/main.py", line 19
    print theme
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/i3theme/utils/themeparser.py'...
***   File "./lib/python3.5/site-packages/i3theme/utils/themeparser.py", line 31
    print "Error during the loading of \"" + os.path.basename(themeFilePath) + "\" :"
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/i3theme-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/voluptuous'...
Listing './lib/python3.5/site-packages/voluptuous-0.10.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
